<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Settings">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bluredbackgroundImageDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/settingsbackground" />

    <LinearLayout
        android:id="@+id/settingsHeaders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundcorners"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:paddingTop="-10dp"
            android:paddingBottom="-10dp"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/back"
        android:layout_below="@id/settingsHeaders"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/backgroundgray"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/UpdateHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/schedule_update_method"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/updateGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/Automatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/Automatic"
                    android:textColor="@color/white"
                    tools:targetApi="lollipop" />

            </RadioGroup>


            <Button
                android:id="@+id/editSchedules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/create_custom_schedule"
                android:textSize="15sp" />

            <Button
                android:id="@+id/Reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@color/red"
                android:color="@color/fbutton_color_alizarin"
                android:text="@string/reset"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/save"
        android:textSize="15sp" />


</RelativeLayout>